@startuml
class Member {
    Long id
    Role role
    String signId
    String name
    String password
    Boolean isDeleted
    List<ProjectMember> projects
    List<Issue> reportedIssues
    List<Issue> fixedIssues
    List<Issue> assignedIssues
    List<Comment> comments
}

class MemberService {
    +MemberResponseDto deleteMember(Long signId, MemberDeleteRequestDto memberDeleteRequestDto)
}

class MemberRepository {
    +Optional<Member> findByIdAndIsDeletedFalse(Long id)
    +Member save(Member member)
}

class IssueRepository {
    +List<Issue> findByAssigneeIdAndStatusNot(Long assigneeId, Status status)
}

class DtoConverter {
    +MemberResponseDto createMemberResponseDto(Member member)
}

MemberService --> MemberRepository
MemberService --> IssueRepository
MemberService --> DtoConverter
Member --> ProjectMember
Member --> Issue
Member --> Comment
@enduml
